# rs-wineventlog

./: Cargo.toml  Dockerfile.build  README.md  Taskfile.yml  build.rs  config.yaml  docker-compose.yml  goreleaser.yaml
.github/: dependabot.yml
.github/workflows/: release.yml
src/: config.rs  eventlog.rs  main.rs  output.rs  privilege.rs  xml.rs
