[package]
name = "rs-wineventlog"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/bdwyertech/rs-wineventlog"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s" # use 3 for performance-critical applications

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.62", features = [
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
roxmltree = "0.21"
serde_json = "1.0"

[target.'cfg(not(windows))'.dependencies]

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
