[package]
name = "wineventlog"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/bdwyertech/rs-wineventlog"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s" # use 3 for performance-critical applications

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
atty = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "std"] }
clap_complete = "4.0"
config = { version = "0.14", default-features = false, features = ["yaml"] }
ctrlc = "3.4"
env_logger = "0.11"
glob-match = "0.2"
log = "0.4"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62", features = [
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
built = { version = "0.8", features = [
    "cargo-lock",
    "chrono",
    "dependency-tree",
    "git2",
    "semver"
] }
